--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Startup Idea Evaluator</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Startup Idea Evaluator</h1>
