--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -3,17 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <title>Startup Idea Evaluator</title>
-<link rel="stylesheet" href="style.css">
+
+<!-- FIX: Serve assets from /static -->
+<link rel="stylesheet" href="/static/style.css">
+
 </head>
 <body>
 <h1>Startup Idea Evaluator</h1>
+
 <form id="ideaForm">
   <input type="text" name="name" placeholder="Your Name" required />
   <input type="text" name="title" placeholder="Idea Title" required />
   <textarea name="feedback" placeholder="Your Idea..." required></textarea>
   <button type="submit">Submit</button>
 </form>
+
 <pre id="result"></pre>
-<script src="main.js"></script>
+
+<!-- FIX: Load JS from /static -->
+<script src="/static/main.js"></script>
+
 </body>
 </html>
