--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Startup Idea Evaluator</title>
-  <link rel="stylesheet" href="/static/style.css">
+<meta charset="UTF-8">
+<title>Startup Idea Evaluator</title>
+<link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
+<h1>Startup Idea Evaluator</h1>
 
-  <div class="container">
-    <h1 class="title">🚀 Startup Idea Evaluator</h1>
+<form id="ideaForm">
+  <input type="text" name="name" placeholder="Your Name" required />
+  <input type="text" name="title" placeholder="Idea Title" required />
+  <textarea name="feedback" placeholder="Describe your idea..." rows="3" required></textarea>
+  <textarea name="details" placeholder="Additional details (optional)" rows="3"></textarea>
+  <button type="submit">Submit</button>
+</form>
 
-    <form id="ideaForm" class="card">
-      <label>Name</label>
-      <input type="text" id="name" required>
+<div id="result" class="result-container"></div>
 
-      <label>Your Role / Background</label>
-      <input type="text" id="title" required>
-
-      <label>Describe your startup idea</label>
-      <textarea id="feedback" rows="5" required></textarea>
-
-      <button type="submit" id="submitBtn">✨ Evaluate Idea</button>
-    </form>
-
-    <div id="result" class="result hidden"></div>
-  </div>
-
-  <script src="/static/main.js"></script>
+<script src="/static/main.js"></script>
 </body>
 </html>
