--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -6,9 +6,10 @@
   <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>🚀 Startup Idea Evaluator</h1>
+  <!-- Page header outside the card -->
+  <h1 class="page-header">🚀 Startup Idea Evaluator</h1>
 
+  <div class="container">
     <form id="ideaForm">
       <!-- Name -->
       <input type="text" name="name" placeholder="Your Name" required>
