--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>🚀 Startup Idea Evaluator</title>
+  <title>🚀 Startup Idea Evaluators</title>
   <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
